[tool.poetry]
name = "fusee-launcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fusee_launcher"}]

[tool.poetry.dependencies]
python = "^3.10"
pyusb = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
